@@ -4,16 +4,16 @@ name = Torch Bandolier
 description = Torch Bandolier
 
 mc_version=1.12.2
-sl_version=ef9c7a78196529cae700c0fbdf6a8956d259a953
-jei_version=4.11.0.202
+sl_version=1.12-SNAPSHOT
+jei_version=4.11.0.206
 
 fg_version = ForgeGradle:2.3-SNAPSHOT
 forge_mc_version = 1.12.2
-forge_version = 14.23.4.2730
-mcp_mappings = snapshot_20180717
+forge_version = 14.23.4.2750
+mcp_mappings = stable_39
 
 lombok_version = 1.18.0
 
-cf_project_id = -1
-cf_release_type = alpha
+cf_project_id = 299337
+cf_release_type = beta
 cf_changelog_filename = changelog.txt
